# DigiByte-ADN-v2

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CHANGELOG.md  INDEX.md  architecture.md  examples.md  overview.md  policy_engine.md  technical-spec.md  whitepaper-adn-v2.md
docs/v2/: defense_flow.md  telemetry_flow.md  whitepaper-adn-v2.md
docs/v3/: ARCHITECTURE.md  CONTRACT.md  INDEX.md
examples/: example_adn_flow.py  example_adn_telemetry_flow.py  example_defense_events.py
src/adn_v2/: __init__.py  actions.py  adaptive_bridge.py  cli.py  client.py  config.py  engine.py  main.py  models.py  policy.py  server.py  telemetry.py  v3.py  validator.py
src/adn_v2/contracts/: __init__.py  v3_hash.py  v3_reason_codes.py
src/adn_v3/: __init__.py
src/adn_v3/contracts/: v3_reason_codes.py
tests/: __init__.py  basic_policy.py  test_contract_v3_event_unknown_key_fail_closed.py  test_contract_v3_fail_closed.py  test_contract_v3_oversize_fail_closed.py  test_contract_v3_unknown_key_fail_closed.py  test_defense_engine.py  test_imports.py  test_v3_meta_determinism.py
