[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digibyte-adn"
version = "3.0.0"
description = "DigiByte Active Defence Network (ADN) — Shield Contract v3 local defense engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DarekDGB" }]
keywords = ["digibyte", "security", "wallet", "shield", "adn", "contract", "v3"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/DarekDGB/DigiByte-ADN"
Repository = "https://github.com/DarekDGB/DigiByte-ADN"
Issues = "https://github.com/DarekDGB/DigiByte-ADN/issues"

# Optional dependency groups (safe defaults)
[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
]
# Keep future room without forcing install
api = []

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["adn_v3*", "adn_v2*"]

# If you later add data files under src/adn_v2/**, keep this section.
[tool.setuptools.package-data]
adn_v2 = ["py.typed"]
adn_v3 = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter rules / pragmatically

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true

# Keep mypy from choking on tests unless you want strict tests too
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
